Anonymous | Login | 2021-01-17 19:50 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0024268 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2013-10-18 11:48 | 2014-02-13 10:43 | ||||
Reporter | apn | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | A | OS | L | OS Version | L | ||||
Product Version | [OCCT] 6.7.0 | ||||||||
Target Version | [OCCT] 6.7.0 | Fixed in Version | [OCCT] 6.7.0 | ||||||
Summary | 0024268: Wrong triangulation on the boundaries of the cones | ||||||||
Description | Some shapes included cones have triangulation problems. It seems that it caused by integration of branch CR23650_2. Different images are on the current master: http://occt-tests/IR-2013-10-17-IR-2013-10-17-occt/Debian60-64/diff-Debian60-64.html [^] http://occt-tests/IR-2013-10-17-IR-2013-10-17-occt/Windows-32-VC9/diff-Windows-32-VC9.html [^] IMAGE bugs vis bug22188: bug22188_Driver1_Viewer1_View1.png differs IMAGE bugs vis bug22900: bug22900_Driver1_Viewer1_View1.png differs IMAGE bugs mesh bug23512_1: bug23512_1_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_2 bug22818_1: bug22818_1_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_2 bug22818_2: bug22818_2_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_2 bug22818_3: bug22818_3_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_2 bug22818_4: bug22818_4_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_5 bug23282_1: bug23282_1_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_5 bug23282_2: bug23282_2_Driver1_Viewer1_View1.png differs IMAGE mesh standard_shading L1: L1.png differs IMAGE mesh standard_shading O5: O5.png differs IMAGE mesh standard_shading A7: A7.png differs | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs vis(004) bug22188, bug22900; bugs mesh(016) bug23512_1; bugs modalg_2(007) bug22818_1, bug22818_2, bug22818_3, bug22818_4; bugs modalg_5(010) bug23282_1, bug23282_2; mesh standard_shading(001) L1, O5, A7 | ||||||||
Attached Files | |||||||||
![]() |
|||||||||||||
|
![]() |
|
(0026278) aml (developer) 2013-10-25 12:51 |
Dear ifv, Please, test the current state of branch CR24268 to be sure it is still ok. In attached files results of tests. bugs vis bug22188 - improvements in normals computing, without CR23650_2 and this branch we can see that some normals are wrong. I can't see any problems in this case. bugs vis bug22900 - fixed, see attach. bugs mesh bug23512_1 - fixed, see attach. bugs modalg_2 bug22818_1 - can't see differences in images. bugs modalg_2 bug22818_2 - can't see differences in images. bugs modalg_2 bug22818_3 - fixed, see attach. bugs modalg_2 bug22818_4 - fixed, see attach. bugs modalg_5 bug23282_1 - fixed, see attach. bugs modalg_5 bug23282_2 - fixed, see attach. mesh standard_shading L1 - improvements in normals computing, see attach. mesh standard_shading O5 - same "bugs vis bug22188" message. mesh standard_shading A7 - fixed, see attach. |
(0026325) aml (developer) 2013-10-29 13:26 |
Dear ifv, Please check current state of branch CR24268. |
(0026328) ifv (developer) 2013-10-29 13:47 |
Ok |
(0026357) mkv (tester) 2013-10-30 11:36 |
Dear BugMaster, Branch CR24268 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 0134b11eb4dae2149be9ee3f1243043455cbd4dc Number of compiler warnings: occt component : Linux: 320 (323 on master) Windows: 0 (0 on master) products component : Linux: 189 (189 on master) Windows: 287 (287 on master) Regressions/Differences: http://occt-tests/CR24268-master-occt/Debian60-64/summary.html [^] http://occt-tests/CR24268-master-occt/Windows-32-VC9/summary.html [^] mesh advanced_incmesh(002) B2, B3, B7 mesh advanced_incmesh_parallel(007) B2, B3, B7 mesh advanced_mesh(006) B2, B3, B7, C2 mesh advanced_shading(004) B2, B3, B7 mesh standard_incmesh(002) N8, Q6, R5, U7, W5, W9 mesh standard_incmesh_parallel(007) N8, Q6, R5, U7, W5, W9 mesh standard_mesh(003) N8, Q6, R5, U7, W5, W9 mesh standard_shading(001) U7, W5, W9 Testing cases: Not needed Testing on Linux: Total MEMORY difference: 350455508 / 353488696 Total CPU difference: 42132.18000000067 / 39741.52000000067 Testing on Windows: Total MEMORY difference: 406138556 / 404717968 Total CPU difference: 29210.15625 / 34066.71875 There are not differences in images found by testdiff. http://occt-tests/CR24268-master-occt/Debian60-64/diff-Debian60-64.html [^] http://occt-tests/CR24268-master-occt/Windows-32-VC9/diff-Windows-32-VC9.html [^] IMAGE bugs vis bug22900: bug22900_Driver1_Viewer1_View1.png differs IMAGE bugs mesh bug23512_1: bug23512_1_Driver1_Viewer1_View1.png differs IMAGE bugs mesh bug23512_2: bug23512_2_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_2 bug22818_1: bug22818_1_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_2 bug22818_2: bug22818_2_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_2 bug22818_3: bug22818_3_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_2 bug22818_4: bug22818_4_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_2 bug22631: bug22631_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_2 bug22641: bug22641_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_5 bug23282_1: bug23282_1_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_5 bug23282_2: bug23282_2_Driver1_Viewer1_View1.png differs IMAGE mesh standard_shading L1: L1.png differs IMAGE mesh standard_shading A7: A7.png differs |
(0026392) aml (developer) 2013-10-31 13:36 |
Dear ifv, Please check current state of branch CR24268_2. There was exception in case of null partial derivative. (fixed) bugs modalg_2 bug22631, bugs modalg_2 bug22641 - fixed. All other images which have differences are correct, because this issue created to restore "status quo" for tests in description field, if it is possible. |
(0026393) ifv (developer) 2013-10-31 14:12 |
Ok |
(0026455) mkv (tester) 2013-11-05 13:51 |
Dear BugMaster, Branch CR24268_2 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 5961fff77eff976baedd4a2faca76f016c35a9e0 Number of compiler warnings: occt component : Linux: 323 (323 on master) Windows: 0 (0 on master) products component : Linux: 189 (189 on master) Windows: 287 (287 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR24268-2-master-occt/Debian60-64/bugs/vis/bug22188.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/bugs/vis/bug22188.html [^] bugs vis(004) bug22188 - OK http://occt-tests/CR24268-2-master-occt/Debian60-64/bugs/vis/bug22900.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/bugs/vis/bug22900.html [^] bugs vis(004) bug22900 - OK http://occt-tests/CR24268-2-master-occt/Debian60-64/bugs/mesh/bug23512_1.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/bugs/mesh/bug23512_1.html [^] bugs mesh(016) bug23512_1 - OK http://occt-tests/CR24268-2-master-occt/Debian60-64/bugs/modalg_2/bug22818_1.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/bugs/modalg_2/bug22818_1.html [^] bugs modalg_2(007) bug22818_1 - OK http://occt-tests/CR24268-2-master-occt/Debian60-64/bugs/modalg_2/bug22818_2.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/bugs/modalg_2/bug22818_2.html [^] bugs modalg_2(007) bug22818_2 - OK http://occt-tests/CR24268-2-master-occt/Debian60-64/bugs/modalg_2/bug22818_3.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/bugs/modalg_2/bug22818_3.html [^] bugs modalg_2(007) bug22818_3 - OK http://occt-tests/CR24268-2-master-occt/Debian60-64/bugs/modalg_2/bug22818_4.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/bugs/modalg_2/bug22818_4.html [^] bugs modalg_2(007) bug22818_4 - OK http://occt-tests/CR24268-2-master-occt/Debian60-64/bugs/modalg_5/bug23282_1.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/bugs/modalg_5/bug23282_1.html [^] bugs modalg_5(010) bug23282_1 - OK http://occt-tests/CR24268-2-master-occt/Debian60-64/bugs/modalg_5/bug23282_2.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/bugs/modalg_5/bug23282_2.html [^] bugs modalg_5(010) bug23282_2 - OK http://occt-tests/CR24268-2-master-occt/Debian60-64/mesh/standard_shading/L1.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/mesh/standard_shading/L1.html [^] mesh standard_shading(001) L1 - OK http://occt-tests/CR24268-2-master-occt/Debian60-64/mesh/standard_shading/O5.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/mesh/standard_shading/O5.html [^] mesh standard_shading(001) O5 - OK http://occt-tests/CR24268-2-master-occt/Debian60-64/mesh/standard_shading/A7.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/mesh/standard_shading/A7.html [^] mesh standard_shading(001) A7 - OK Testing on Linux: Total MEMORY difference: 355907920 / 356291220 Total CPU difference: 43088.04000000091 / 40673.20000000072 Testing on Windows: Total MEMORY difference: 407797516 / 406499704 Total CPU difference: 29940.921875 / 34773.5 There are following differences in images found by testdiff. http://occt-tests/CR24268-2-master-occt/Debian60-64/diff-Debian60-64.html [^] http://occt-tests/CR24268-2-master-occt/Windows-32-VC9/diff-Windows-32-VC9.html [^] IMAGE bugs vis bug22900: bug22900_Driver1_Viewer1_View1.png differs - Improvement IMAGE bugs mesh bug23512_1: bug23512_1_Driver1_Viewer1_View1.png differs - Improvement IMAGE bugs modalg_2 bug22818_3: bug22818_3_Driver1_Viewer1_View1.png differs - Improvement IMAGE bugs modalg_2 bug22818_4: bug22818_4_Driver1_Viewer1_View1.png differs - Improvement IMAGE bugs modalg_5 bug23282_1: bug23282_1_Driver1_Viewer1_View1.png differs - Improvement IMAGE bugs modalg_5 bug23282_2: bug23282_2_Driver1_Viewer1_View1.png differs - Improvement IMAGE mesh standard_shading L1: L1.png differs - Improvement IMAGE mesh standard_shading A7: A7.png differs - Improvement |
(0026541) mkv (tester) 2013-11-11 15:30 |
Dear BugMaster, Branch CR24268_2 was rebased on current master. Branch CR24268_2 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 0570ff0cbea036c662cff2aa235cea316ccd01f2 Number of compiler warnings: occt component : Linux: 318 (318 on master) Windows: 0 (0 on master) products component : Linux: 188 (188 on master) Windows: 287 (287 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR24268-02-master-occt/Debian60-64/bugs/vis/bug22188.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/bugs/vis/bug22188.html [^] bugs vis(004) bug22188 - OK http://occt-tests/CR24268-02-master-occt/Debian60-64/bugs/vis/bug22900.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/bugs/vis/bug22900.html [^] bugs vis(004) bug22900 - OK http://occt-tests/CR24268-02-master-occt/Debian60-64/bugs/mesh/bug23512_1.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/bugs/mesh/bug23512_1.html [^] bugs mesh(016) bug23512_1 - OK http://occt-tests/CR24268-02-master-occt/Debian60-64/bugs/modalg_2/bug22818_1.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/bugs/modalg_2/bug22818_1.html [^] bugs modalg_2(007) bug22818_1 - OK http://occt-tests/CR24268-02-master-occt/Debian60-64/bugs/modalg_2/bug22818_2.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/bugs/modalg_2/bug22818_2.html [^] bugs modalg_2(007) bug22818_2 - OK http://occt-tests/CR24268-02-master-occt/Debian60-64/bugs/modalg_2/bug22818_3.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/bugs/modalg_2/bug22818_3.html [^] bugs modalg_2(007) bug22818_3 - OK http://occt-tests/CR24268-02-master-occt/Debian60-64/bugs/modalg_2/bug22818_4.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/bugs/modalg_2/bug22818_4.html [^] bugs modalg_2(007) bug22818_4 - OK http://occt-tests/CR24268-02-master-occt/Debian60-64/bugs/modalg_5/bug23282_1.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/bugs/modalg_5/bug23282_1.html [^] bugs modalg_5(010) bug23282_1 - OK http://occt-tests/CR24268-02-master-occt/Debian60-64/bugs/modalg_5/bug23282_2.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/bugs/modalg_5/bug23282_2.html [^] bugs modalg_5(010) bug23282_2 - OK http://occt-tests/CR24268-02-master-occt/Debian60-64/mesh/standard_shading/L1.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/mesh/standard_shading/L1.html [^] mesh standard_shading(001) L1 - OK http://occt-tests/CR24268-02-master-occt/Debian60-64/mesh/standard_shading/O5.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/mesh/standard_shading/O5.html [^] mesh standard_shading(001) O5 - OK http://occt-tests/CR24268-02-master-occt/Debian60-64/mesh/standard_shading/A7.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/mesh/standard_shading/A7.html [^] mesh standard_shading(001) A7 - OK Testing on Linux: Total MEMORY difference: 356380652 / 356538344 Total CPU difference: 43777.46999999998 / 42450.93000000044 Testing on Windows: Total MEMORY difference: 408412840 / 407665616 Total CPU difference: 31291.25 / 30101.390625 There are following differences in images found by testdiff. http://occt-tests/CR24268-02-master-occt/Debian60-64/diff-Debian60-64.html [^] http://occt-tests/CR24268-02-master-occt/Windows-32-VC9/diff-Windows-32-VC9.html [^] IMAGE mesh standard_shading L1: L1.png differs - Improvement IMAGE mesh standard_shading A7: A7.png differs - Improvement IMAGE bugs mesh bug23512_1: bug23512_1_Driver1_Viewer1_View1.png differs - Improvement IMAGE bugs modalg_5 bug23282_2: bug23282_2_Driver1_Viewer1_View1.png differs - Improvement IMAGE bugs modalg_5 bug23282_1: bug23282_1_Driver1_Viewer1_View1.png differs - Improvement IMAGE bugs modalg_2 bug22818_4: bug22818_4_Driver1_Viewer1_View1.png differs - Improvement IMAGE bugs modalg_2 bug22818_3: bug22818_3_Driver1_Viewer1_View1.png differs - Improvement IMAGE bugs vis bug22900: bug22900_Driver1_Viewer1_View1.png differs - Improvement |
![]() |
|||
occt: master 23b894f7
Timestamp: 2013-11-14 07:01:09 Author: aml Committer: bugmaster [ Details ] [ Diff ] |
0024268: Wrong triangulation on the boundaries of the cones Added check for cone singularity point, modified isoline checks, deleted check along U and V in GeomLib::NormEstim. Correction in sign in GeomLib::NormEstim. |
||
mod - src/GeomLib/GeomLib.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2013-10-18 11:48 | apn | New Issue | |
2013-10-18 11:48 | apn | Assigned To | => aml |
2013-10-18 11:49 | apn | Status | new => assigned |
2013-10-18 11:49 | apn | Relationship added | child of 0023650 |
2013-10-25 12:41 | aml | File Added: 24268.7z | |
2013-10-25 12:51 | aml | Note Added: 0026278 | |
2013-10-25 12:51 | aml | Assigned To | aml => ifv |
2013-10-25 12:51 | aml | Status | assigned => resolved |
2013-10-29 12:22 | aml | File Deleted: 24268.7z | |
2013-10-29 13:25 | aml | Assigned To | ifv => aml |
2013-10-29 13:25 | aml | Status | resolved => assigned |
2013-10-29 13:26 | aml | Note Added: 0026325 | |
2013-10-29 13:26 | aml | Assigned To | aml => ifv |
2013-10-29 13:26 | aml | Status | assigned => resolved |
2013-10-29 13:47 | ifv | Note Added: 0026328 | |
2013-10-29 13:47 | ifv | Status | resolved => reviewed |
2013-10-29 13:56 | mkv | Assigned To | ifv => mkv |
2013-10-30 11:36 | mkv | Note Added: 0026357 | |
2013-10-30 11:37 | mkv | Assigned To | mkv => aml |
2013-10-30 11:37 | mkv | Status | reviewed => assigned |
2013-10-31 13:36 | aml | Note Added: 0026392 | |
2013-10-31 13:36 | aml | Assigned To | aml => ifv |
2013-10-31 13:36 | aml | Status | assigned => resolved |
2013-10-31 14:12 | ifv | Note Added: 0026393 | |
2013-10-31 14:12 | ifv | Status | resolved => reviewed |
2013-10-31 17:43 | mkv | Assigned To | ifv => mkv |
2013-11-05 13:51 | mkv | Note Added: 0026455 | |
2013-11-05 13:51 | mkv | Test case number | => bugs vis(004) bug22188, bug22900; bugs mesh(016) bug23512_1; bugs modalg_2(007) bug22818_1, bug22818_2, bug22818_3, bug22818_4; bugs modalg_5(010) bug23282_1, bug23282_2; mesh standard_shading(001) L1, O5, A7 |
2013-11-11 15:30 | mkv | Note Added: 0026541 | |
2013-11-11 15:31 | mkv | Assigned To | mkv => bugmaster |
2013-11-11 15:31 | mkv | Status | reviewed => tested |
2013-11-15 10:24 | bugmaster | Changeset attached | => occt master 23b894f7 |
2013-11-15 10:24 | bugmaster | Status | tested => verified |
2013-11-15 10:24 | bugmaster | Resolution | open => fixed |
2013-12-19 13:51 | bugmaster | Status | verified => closed |
2013-12-19 13:59 | bugmaster | Fixed in Version | => 6.7.0 |
2014-02-13 10:43 | kgv | Relationship added | related to 0021753 |
Copyright © 2000 - 2021 MantisBT Team |