0024268: Wrong triangulation on the boundaries of the cones Added check for cone singularity point, modified isoline checks, deleted check along U and V in GeomLib::NormEstim. Correction in sign in GeomLib::NormEstim.